--- a/internal/compiler/templates/service.go.tmpl
+++ b/internal/compiler/templates/service.go.tmpl
@@ -28,7 +28,7 @@
   type {{$service.Name}}Server interface {
     Start({{$service.Name}}ServiceOptions) error
     Stop() error
-    Handle({{$service.Name}}HandlerOptions, func(context.Context, *{{$service.Name}}Transport[[]byte])(*{{$service.Name}}Transport[[]byte], error))
+    Handle({{$service.Name}}HandlerOptions, func(context.Context, *{{$service.Name}}Transport[[]byte])(*{{$service.Name}}Transport[[]byte], error)) error
   }
 
   type {{$service.Name}}Service interface {
@@ -66,7 +66,7 @@
           ServiceOptions: *Get{{$service.Name}}ServiceOptions(),
           RpcOptions:  *Get{{$service.Name}}{{$rpc.Name}}RpcOptions(),
         }
-        server.Handle({{$service.Name}}HandlerOptions, func(ctx context.Context, in *{{$service.Name}}Transport[[]byte])(*{{$service.Name}}Transport[[]byte], error) {
+        if err := server.Handle({{$service.Name}}HandlerOptions, func(ctx context.Context, in *{{$service.Name}}Transport[[]byte])(*{{$service.Name}}Transport[[]byte], error) {
           var req {{$rpc.Input}}
           if err := protolizer.FastUnmarshal(in.Data, &req); err != nil {
             return nil, err
@@ -80,7 +80,10 @@
             return nil, err
           }
           return &{{$service.Name}}Transport[[]byte] {out, res.Headers}, nil
-        })
+        }); err != nil {
+          panic(err)
+        }
+        
       {{- end }}
   }
 
