--- a/internal/compiler/templates/decode.go.tmpl
+++ b/internal/compiler/templates/decode.go.tmpl
@@ -38,7 +38,7 @@ func (x *{{.Name}}) Decode(field *metadata.Field, buffer *bytes.Buffer) error {
 {{- end}}
 
 {{- define "DecodeBool"}}
-value, err := protolizer.BooleanDecoder(field, buffer)
+value, err := pdk.BoolDecode(buffer)
 if err != nil {
     return err
 } 
@@ -47,7 +47,7 @@ return nil
 {{- end}}
 
 {{- define "DecodeSignedNumber"}}
-value, err := protolizer.SignedNumberDecoder(field, buffer)
+value, err := pdk.SignedNumberDecoder(field.Tags.Protobuf.WireType, buffer)
 if err != nil {
     return err
 } 
@@ -57,7 +57,7 @@ return nil
 {{- end}}
 
 {{- define "DecodeUnsignedNumber"}}
-value, err := protolizer.UnsignedNumberDecoder(field, buffer)
+value, err := pdk.UnsignedNumberDecoder(field.Tags.Protobuf.WireType, buffer)
 if err != nil {
     return err
 } 
@@ -67,7 +67,7 @@ return nil
 {{- end}}
 
 {{- define "DecodeFloat32"}}
-value, err := protolizer.FloatDecoder(field, buffer)
+value, err := pdk.Float32Decode(buffer)
 if err != nil {
     return err
 } 
@@ -77,7 +77,7 @@ return nil
 {{- end}}
 
 {{- define "DecodeFloat64"}}
-value, err := protolizer.DoubleDecoder(field, buffer)
+value, err := pdk.Float64Decode(buffer)
 if err != nil {
     return err
 }
@@ -87,7 +87,7 @@ return nil
 {{- end}}
 
 {{- define "DecodeString"}}
-value, err := protolizer.StringDecoder(field, buffer)
+value, err := pdk.StringDecode(buffer)
 if err != nil {
     return err
 } 
@@ -97,11 +97,11 @@ return nil
 
 {{- define "DecodeMessage"}}
 value := new({{.BaseType}})
-bytes, err := protolizer.BytesDecode(buffer)
+bytes, err := pdk.BytesDecode(buffer)
 if err != nil {
     return err
 }
-err = protolizer.FastUnmarshal(bytes, value)
+err = protolizer.StaticCodec().Unmarshal(bytes, value)
 if err != nil {
     return err
 }     
