--- a/internal/compiler/templates/main.go.tmpl
+++ b/internal/compiler/templates/main.go.tmpl
@@ -13,6 +13,10 @@
         "context"
 
         "github.com/vedadiyan/protolizer"
+        "github.com/vedadiyan/protolizer/metadata"
+        "github.com/vedadiyan/protolizer/codecs"
+        "github.com/vedadiyan/protolizer/pdk"
+        "github.com/vedadiyan/protolizer/memory"
     )
 
 
