--- a/internal/compiler/templates/message.go.tmpl
+++ b/internal/compiler/templates/message.go.tmpl
@@ -18,7 +18,7 @@ func (x *{{.Name}}) New() codecs.Reflected {
 }
 
 func (x *{{.Name}}) Type() metadata.Type {
-    return metadata.CaptureTypeByName("{{.TypeName}}")
+    return *metadata.CaptureTypeByName("{{.TypeName}}")
 }
 {{- end}}
 
